------------------------------------------------------------------------------
autoEM Changelog
------------------------------------------------------------------------------

autoEM 0.1.0 (十月 17, 2012):
	* Initial release