@@ -1,0 +1,3 @@
+.*.swp
+*.pyc
+*.son
