@@ -1,14 +1,14 @@
-DEB [20121022-15:44:57.025] thr=1   paramiko.transport: starting thread (client mode): 0x2a16690L
-INF [20121022-15:44:57.029] thr=1   paramiko.transport: Connected (version 2.0, client OpenSSH_5.5)
-DEB [20121022-15:44:57.032] thr=1   paramiko.transport: kex algos:['diffie-hellman-group-exchange-sha256', 'diffie-hellman-group-exchange-sha1', 'diffie-hellman-group14-sha1', 'diffie-hellman-group1-sha1'] server key:['ssh-rsa', 'ssh-dss'] client encrypt:['aes128-ctr', 'aes192-ctr', 'aes256-ctr', 'arcfour256', 'arcfour128', 'aes128-cbc', '3des-cbc', 'blowfish-cbc', 'cast128-cbc', 'aes192-cbc', 'aes256-cbc', 'arcfour', 'rijndael-cbc@lysator.liu.se'] server encrypt:['aes128-ctr', 'aes192-ctr', 'aes256-ctr', 'arcfour256', 'arcfour128', 'aes128-cbc', '3des-cbc', 'blowfish-cbc', 'cast128-cbc', 'aes192-cbc', 'aes256-cbc', 'arcfour', 'rijndael-cbc@lysator.liu.se'] client mac:['hmac-md5', 'hmac-sha1', 'umac-64@openssh.com', 'hmac-ripemd160', 'hmac-ripemd160@openssh.com', 'hmac-sha1-96', 'hmac-md5-96'] server mac:['hmac-md5', 'hmac-sha1', 'umac-64@openssh.com', 'hmac-ripemd160', 'hmac-ripemd160@openssh.com', 'hmac-sha1-96', 'hmac-md5-96'] client compress:['none', 'zlib@openssh.com'] server compress:['none', 'zlib@openssh.com'] client lang:[''] server lang:[''] kex follows?False
-DEB [20121022-15:44:57.032] thr=1   paramiko.transport: Ciphers agreed: local=aes128-ctr, remote=aes128-ctr
-DEB [20121022-15:44:57.032] thr=1   paramiko.transport: using kex diffie-hellman-group1-sha1; server key type ssh-rsa; cipher: local aes128-ctr, remote aes128-ctr; mac: local hmac-sha1, remote hmac-sha1; compression: local none, remote none
-DEB [20121022-15:44:57.090] thr=1   paramiko.transport: Switch to new keys ...
-DEB [20121022-15:44:57.098] thr=2   paramiko.transport: Host key verified (ssh-rsa)
-DEB [20121022-15:44:57.098] thr=2   paramiko.transport: Attempting password auth...
-DEB [20121022-15:44:57.133] thr=1   paramiko.transport: userauth is OK
-INF [20121022-15:44:57.141] thr=1   paramiko.transport: Authentication (password) successful!
-DEB [20121022-15:44:57.163] thr=2   paramiko.transport: [chan 1] Max packet in: 34816 bytes
-DEB [20121022-15:44:57.166] thr=1   paramiko.transport: [chan 1] Max packet out: 32768 bytes
-INF [20121022-15:44:57.166] thr=1   paramiko.transport: Secsh channel 1 opened.
-DEB [20121022-15:44:57.171] thr=1   paramiko.transport: [chan 1] Sesch channel 1 request ok
+DEB [20121023-16:55:49.350] thr=1   paramiko.transport: starting thread (client mode): 0x26e6710L
+INF [20121023-16:55:49.355] thr=1   paramiko.transport: Connected (version 2.0, client OpenSSH_5.5)
+DEB [20121023-16:55:49.357] thr=1   paramiko.transport: kex algos:['diffie-hellman-group-exchange-sha256', 'diffie-hellman-group-exchange-sha1', 'diffie-hellman-group14-sha1', 'diffie-hellman-group1-sha1'] server key:['ssh-rsa', 'ssh-dss'] client encrypt:['aes128-ctr', 'aes192-ctr', 'aes256-ctr', 'arcfour256', 'arcfour128', 'aes128-cbc', '3des-cbc', 'blowfish-cbc', 'cast128-cbc', 'aes192-cbc', 'aes256-cbc', 'arcfour', 'rijndael-cbc@lysator.liu.se'] server encrypt:['aes128-ctr', 'aes192-ctr', 'aes256-ctr', 'arcfour256', 'arcfour128', 'aes128-cbc', '3des-cbc', 'blowfish-cbc', 'cast128-cbc', 'aes192-cbc', 'aes256-cbc', 'arcfour', 'rijndael-cbc@lysator.liu.se'] client mac:['hmac-md5', 'hmac-sha1', 'umac-64@openssh.com', 'hmac-ripemd160', 'hmac-ripemd160@openssh.com', 'hmac-sha1-96', 'hmac-md5-96'] server mac:['hmac-md5', 'hmac-sha1', 'umac-64@openssh.com', 'hmac-ripemd160', 'hmac-ripemd160@openssh.com', 'hmac-sha1-96', 'hmac-md5-96'] client compress:['none', 'zlib@openssh.com'] server compress:['none', 'zlib@openssh.com'] client lang:[''] server lang:[''] kex follows?False
+DEB [20121023-16:55:49.357] thr=1   paramiko.transport: Ciphers agreed: local=aes128-ctr, remote=aes128-ctr
+DEB [20121023-16:55:49.357] thr=1   paramiko.transport: using kex diffie-hellman-group1-sha1; server key type ssh-rsa; cipher: local aes128-ctr, remote aes128-ctr; mac: local hmac-sha1, remote hmac-sha1; compression: local none, remote none
+DEB [20121023-16:55:49.418] thr=1   paramiko.transport: Switch to new keys ...
+DEB [20121023-16:55:49.426] thr=2   paramiko.transport: Host key verified (ssh-rsa)
+DEB [20121023-16:55:49.426] thr=2   paramiko.transport: Attempting password auth...
+DEB [20121023-16:55:49.461] thr=1   paramiko.transport: userauth is OK
+INF [20121023-16:55:49.470] thr=1   paramiko.transport: Authentication (password) successful!
+DEB [20121023-16:55:49.491] thr=2   paramiko.transport: [chan 1] Max packet in: 34816 bytes
+DEB [20121023-16:55:49.494] thr=1   paramiko.transport: [chan 1] Max packet out: 32768 bytes
+INF [20121023-16:55:49.495] thr=1   paramiko.transport: Secsh channel 1 opened.
+DEB [20121023-16:55:49.499] thr=1   paramiko.transport: [chan 1] Sesch channel 1 request ok
